# advent-of-code-2020

./: README.md
day-1/: Cargo.toml  README.md
day-1-alt/: Cargo.toml
day-1-alt/src/: main.rs
day-1/src/: main.rs
day-2/: Cargo.toml  README.md
day-2/src/: main.rs
day-3/: Cargo.toml  README.md
day-3/src/: main.rs
day-4/: Cargo.toml  README.md
day-4/src/: main.rs
day-5/: Cargo.toml  README.md
day-5/src/: main.rs
day-6/: Cargo.toml  README.md
day-6/src/: main.rs
