[package]
name = "day-2"
version = "0.1.0"
authors = ["WombatFromHell <WombatFromHell@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.5"
features = ["attributes"]

[dependencies]
text_io = "0.1.8"